Bug 33341 - Print range is missing when sheet is copied
Summary: Print range is missing when sheet is copied
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 RC4
Hardware: Other Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4 target:6.1.0
Keywords:
: 33339 33340 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-21 08:24 UTC by Kees Westendorp
Modified: 2019-12-07 19:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kees Westendorp 2011-01-21 08:24:00 UTC
When Sheet1 contains a print range, and this Sheet1 is copied to Sheet2 with "copy sheet", than all is copied except the print range of Sheet1
Comment 1 Noel Power 2011-01-21 08:33:47 UTC
for Kohei I guess
Comment 2 Noel Power 2011-01-24 07:39:32 UTC
*** Bug 33339 has been marked as a duplicate of this bug. ***
Comment 3 Noel Power 2011-01-24 07:43:24 UTC
*** Bug 33340 has been marked as a duplicate of this bug. ***
Comment 4 Kees Westendorp 2011-01-25 01:27:13 UTC
(In reply to comment #0)
> When Sheet1 contains a print range, and this Sheet1 is copied to Sheet2 with
> "copy sheet", than all is copied except the print range of Sheet1

In addition
===========
1) Make a template T1 that contains (ao) Print ranges, Rows and Columns to repeat.
2) Create a new spreadsheet based on template T1.
The spreadsheet that is generated contains the sheet with Print ranges, Rows and Columns.
So far, so good.

2) Than add new sheets by:
Insert
- Sheet
 - From file
  - Browse to template directory
   - choose T1 (again)

The bug is now that when creating this second set of new sheets all data is there, but not the Print ranges, Rows and Colums!

This also occurs when using "Copy sheet": all data is copied, except for the Print ranges, Rows and Colums.
Comment 5 Kohei Yoshida 2011-04-19 12:31:39 UTC
Just fixed this in the 3.4 branch, but I just missed the tag for Beta2 by half a day.  So, this fix will be available in the release after Beta2.
Comment 6 Commit Notification 2018-05-15 14:57:42 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e29eacbb6a7efaf154430e41a68d986a951d7f4d

Calc -print range + tdf#33341

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 raal 2019-12-07 19:14:43 UTC
The test exist, set status to Verified.