fdo#33341: Copy print ranges when copying sheet.